# NetCtrl

./: .clinerules  .clinerules.critical  .dockerignore  .env  .env.example  .envrc  .flake8  .gitignore  .netctrl.env  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cleanup.sh  collect_files.sh  compose.yaml  conftest.py  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  foo.py  gpt_prompt.txt  grok.txt  manage.py  mcp_server_prompt.txt  netctrl.code-workspace  nginx.conf.example  pyproject.toml  pytest.ini  requirements.txt  response.html  setup.sh  switch_list.csv  test.yaml  test1.txt  test2.txt  test_get_multicast_info.py  test_password.py  watch_20250303-133752  (+4 more)
_interactive-swagger_m4300_api_docs_2_0_0_59_src/: m4300_configagent_2_0_0_59.yaml  readme.docx
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
app/: Dockerfile  manage.py  requirements.txt
authentication/: forms.py  models.py  tests.py  urls.py  views.py
bugtracker/: urls.py  views.py
cline_docs/: activeContext.md  changelog.md  changelog_update.md  dependency_tracker.md  productContext.md  progress.md  projectPatterns.md  projectbrief.md  systemPatterns.md  techContext.md  todos.md
config/: asgi.py  settings.py  urls.py
core/: consumers.py  context_processors.py  decorators.py  middleware.py  models.py  routing.py  urls.py  utils.py  views.py
ctrl/: settings.py  urls.py
docs/: PROJECT_BRIEF.md  certificate_management_plan.md  certificates.md  design_spec.md  development.md  doc_tracker.md  environment-setup.md  github-integration.md  project_brief.md
env-config/: .env.example  .gitignore
flask_app/: Dockerfile  requirements.txt
frontend/: Dockerfile  nginx.conf  package.json
net_core/: admin.py  api_helpers.py  apps.py  models.py  tests.py  utils.py
net_frontend/: apps.py  forms.py  tests.py  urls.py  views.py
netctrl/: __init__.py  admin.py  apps.py  asgi.py  conftest.py  consumers.py  context_processors.py  db.sqlite3  forms.py  models.py  pyproject.toml  requirements.txt  routing.py  test_views.py  urls.py  views.py  wsgi.py
netctrl/cms/: models.py  permissions.py  storage.py  urls.py  views.py
netctrl/cms/migrations/: 0001_add_file_tags.py
netctrl/cms/services/: advanced_ops.py  analytics.py  categories.py  directory.py  download.py  editor.py  filters.py  firmware.py  internal_api.py  maintenance.py  metadata.py  preview.py  search.py  tags.py  tracking.py  upload.py
netctrl/cms/templates/cms/: file_manager.html
netctrl/cms/templates/cms/components/: bulk_operations.html  file_browser.html  file_upload.html  preview.html
netctrl/config/: settings.py  urls.py
netctrl/data/: bug_queue.json
netctrl/devices/: admin.py  forms.py  models.py  netgear.py  netgear.py.bak  urls.py  views.py
netctrl/devices/migrations/: 0001_initial.py  0002_alter_netgear_login_epoch_time_and_more.py
netctrl/devices/templates/devices/: create.html  delete.html  device.html  devices.html  edit.html
netctrl/migrations/: 0001_initial.py
netctrl/netctrl/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
netctrl/netdash/: apps.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
netctrl/netdash/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py  __init__.py
netctrl/netdevices/: admin.py  apps.py  models.py  urls.py  views.py
netctrl/pages/: admin.py  forms.py  models.py  urls.py  views.py
netctrl/pages/migrations/: 0001_initial.py  0002_alter_page_content.py
netctrl/pages/templates/pages/: create.html  delete.html  edit.html  page.html  pages.html
netctrl/scripts/: download_assets.py
netctrl/settings/: base.py  development.py
netctrl/shell_scripts/: .gh_token  json_debug.sh  process_bug_queue.py  setup_bugtracker_cron.sh
netctrl/static/css/: style.css
netctrl/static/netctrl/css/: bootstrap.min.css  bootstrap.min.css.map  style.css
netctrl/static/netctrl/js/: script.js  tinymce_init.js
netctrl/templates/: 403.html  base.html  cli_manual.html  grid.html  header.html  test.html
netctrl/templates/base/: base.html  login.html
netctrl/templates/netdash/: index.html  pending_approval.html  register.html  user_approval_list.html
netctrl/templates/netdevices/: index.html
netctrl/templates/registration/: login.html
netctrl/templates/test/: alert.html  all.html  button.html  card.html  dark_theme.html  form.html  loading.html  mobile.html
netctrl/tests/: __init__.py  test_views.py  urls.py  views.py
netctrlconfig/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
openapi_client/: README.md  __init__.py  api_client.py  configuration.py  pyproject.toml  rest.py  setup.py
python/: pyvenv.cfg
scripts/: diagnose_github_token.py  install_certificates.sh  logshipper.sh  make_test_file.sh  parse_cli_manual.py  remove_tinymce.sh  setup_env.py  syslog_test.py  syslog_test.sh  test_css_sanitizer.py  test_github_api.py  verify_env.py
strategy_tasks/: Authentication_System_Implementation_Details.md  Authentication_System_Refactoring_Plan.md  Backend_Authentication_Implementation_Plan.md  CMS_Implementation_Plan.md  CMS_Testing_Plan.md  Docker_Environment_Setup_Instructions.md  Frontend_Implementation_Plan.md  User_CRUD_Implementation_Plan.md  User_CRUD_Implementation_Plan_Updated.md
styleguide/: apps.py  urls.py  views.py
switches/: apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
syslog/: syslog-ng.conf
templates/: base.html  dashboard.html  grid.html  header.html  home.html  profile.html
tests/: conftest.py  factories.py  (+12 more)
(+1432 files in other folders)
