[tool.poetry]
name = "netctrl"
version = "0.1.0"
description = "Network switch management system for M4300 switches"
authors = ["Codeium Engineering Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.15.2"
psycopg = {extras = ["binary"], version = "^3.2.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
