[tool.poetry]
name = "netctrl"
version = "0.1.0"
description = "Network switch management application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
channels = "^4.0.0"
channels-redis = "^4.1.0"
redis = "^5.0.1"
daphne = "^4.0.0"
psycopg = {extras = ["binary"], version = "^3.2.4"}
pytest-django = {extras = ["testing"], version = "^4.9.0"}
django-htmx = "^1.21.0"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
pydantic = "^2.6.1"
urllib3 = "^2.2.0"
whitenoise = "^6.8.2"
openapi-client = {path = "openapi_client/dist/openapi_client-1.0.0-py3-none-any.whl"}
requests = "^2.32.3"
django-cors-headers = "^4.6.0"
cryptography = "^44.0.0"
pdfplumber = "^0.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-sugar = "^1.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.8.0"
factory-boy = "^3.3.0"
faker = "^22.5.1"
pre-commit = "^4.1.0"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --no-migrations --cov=. --cov-report=html --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
